client-app/common-sync/material-sync/objects/Product2/fields/FLD_Configurable_Material__c.field-meta.xml
<CustomField>
    <fullName>FLD_Configurable_Material__c</fullName>
    <label>FLD Configurable Material</label>
    <description>SAP Configurable Material</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>