client-app/common-sync/material-sync/objects/Product2/fields/FLD_Dist_Chain_Status__c.field-meta.xml
<CustomField>
    <fullName>FLD_Dist_Chain_Status__c</fullName>
    <label>FLD Dist Chain Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>