client-app/common-sync/material-sync/objects/Product2/fields/FLD_Dist_Chain_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>FLD_Dist_Chain_Status_Date__c</fullName>
    <label>FLD Dist Chain Status Date</label>
    <type>DateTime</type>
</CustomField>