client-app/common-sync/material-sync/objects/Product2/fields/FLD_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>FLD_Distribution_Channel__c</fullName>
    <label>FLD Distribution Channel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>