client-app/common-sync/material-sync/objects/Product2/fields/FLD_Division__c.field-meta.xml
<CustomField>
    <fullName>FLD_Division__c</fullName>
    <label>FLD Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>