client-app/common-sync/material-sync/objects/Product2/fields/FLD_Material_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>FLD_Material_Group_Description__c</fullName>
    <label>FLD Material Group Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>