client-app/common-sync/material-sync/objects/Product2/fields/FLD_Material_Type__c.field-meta.xml
<CustomField>
    <fullName>FLD_Material_Type__c</fullName>
    <label>FLD Material Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>