client-app/common-sync/material-sync/objects/Product2/fields/FLD_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>FLD_Sales_Organization__c</fullName>
    <label>FLD Sales Organization</label>
    <length>30</length>
    <type>Text</type>
</CustomField>