client-app/common-sync/material-sync/objects/Product2/fields/FLD_Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>FLD_Weight_Unit__c</fullName>
    <label>FLD Weight Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>